update logo link

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
                 <nav>
-                    <a href="#" id="logo">
+                    <a href="index.html" id="logo">
                         <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
                     </a>
         
@@ -53,7 +53,7 @@
                     <li> <a href="#" class="nav-link"> Apply</a></li>
                     <li class="top-nav-item"><i class="fa-solid fa-arrow-right-from-bracket nav-link log"></i><a class="nav-link" href="">Logout</a></li>
                     <li> 
-                        <a href="#" id="logo">
+                        <a href="index.html" id="logo">
                             <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy" class="nav-link"><span class="logo-text nav-link logo-menu">Excel Academy</span> 
                         </a>
                     </li>
@@ -88,7 +88,7 @@
                 color brand and initials for the School name, that is (excell academy). We aim to excell.
             </p>
             <div class="about-logo">
-                <a href="#" id="logo" class="logo1">
+                <a href="index.html" id="logo" class="logo1">
                     <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
                 </a>
             </div>
@@ -122,7 +122,7 @@
             <ul>
                 <li>
                     <div class="space"></div>
-                    <a href="#" id="logo" class="logo-about-foot">
+                    <a href="index.html" id="logo" class="logo-about-foot">
                         <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="log-text">Excel Academy</span> 
                     </a>
                 </li>
