--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
             <nav>
-                <a href="#" id="logo">
+                <a href="index.html" id="logo">
                     <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
                 </a>
     
@@ -52,7 +52,7 @@
                 <li> <a href="#" class="nav-link"> Apply</a></li>
                 <li class="top-nav-item"><i class="fa-solid fa-arrow-right-from-bracket nav-link log"></i><a class="nav-link" href="">Logout</a></li>
                 <li> 
-                    <a href="#" id="logo">
+                    <a href="index.html" id="logo">
                         <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy" class="nav-link"><span class="logo-text nav-link logo-menu">Excel Academy</span> 
                     </a>
                 </li>
@@ -105,7 +105,7 @@
         <footer class="foot">
             <ul>
                 <li>
-                    <a href="#" id="logo">
+                    <a href="index.html" id="logo">
                         <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
                     </a>
                 </li>
