fixed margins on about and index

--- a/about.html
+++ b/about.html
@@ -63,7 +63,6 @@
        <br>
     <article class="about-section">
         <main class="main-sec">
-            <p class="greet">"Hello! Developing world!"</p>
             <h2 class="about-head"> EXCEL ACADEMY <br> FOR WEB DEVELOPMENT <br> 2022</h2>
             <div class="about-description">
                 <p> Excel offers top training in leading fields for future young leaders. 
@@ -73,11 +72,13 @@
                      in an impactful career.
                 </p>
             </div>
-            <p class="contact-us" >
-                Please feel free to contact us via email concerning the next class of 2023
-                <br>
+            <div>
+                <p class="contact-us" >
+                    Please feel free to contact us via email concerning the next class of 2023
+                </p> 
                 <a href="index.html" class="link-contact"> excellacademy@academic.org</a> 
-            </p>              
+            </div>
+                         
         </main>
         
         <div class="about_logo">
@@ -89,7 +90,7 @@
             </p>
             <div class="about-logo">
                 <a href="index.html" id="logo" class="logo1">
-                    <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
+                    <img src="img/logo/ExcellAcademy-Logo.svg.png" height="100rem" alt="Excel Academy"><span class="logo-text">Excel Academy</span> 
                 </a>
             </div>
         </div>
@@ -112,18 +113,18 @@
             <h3> Partner</h3>
             <div class="feature-line" id="line-partner"></div>
             <ul>
-                <li> <img src="img/partners/mozilla 1.png"> </li>
-                <li>  <img src="img/partners/googlekorea 1.png"></li>
+                <li><img src="img/partners/mozilla 1.png"> </li>
+                <li> <img src="img/partners/googlekorea 1.png"></li>
                 <li><img src="img/partners/naver 1.png"></li>
                 <li><img src="img/partners/airbnb 1.png"></li>
+                <li><img src="img/partners/daumkakaologo 1.png" alt=""></li>
             </ul>            
         </div>
         <footer class="footer">
             <ul>
-                <li>
-                    <div class="space"></div>
-                    <a href="index.html" id="logo" class="logo-about-foot">
-                        <img src="img/logo/ExcellAcademy-Logo.svg.png" height="50rem" alt="Excel Academy"><span class="log-text">Excel Academy</span> 
+                <li class="logo-f">
+                    <a href="index.html" id="logo">
+                        <img src="img/logo/ExcellAcademy-Logo.svg.png"  alt="Excel Academy"><span class="log-text">Excel Academy</span> 
                     </a>
                 </li>
                 <li>
