--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             <h2 class="main-head"> Course Features</h2>
             <div class="feature-line"></div>
             <ul>
-                <li> <img src="./img/icons/unnamed (1).png" height="50px"> <h2>Tech<br>Skills</h2> <p>Gain the technical capabilities and the job-ready skills employers require.</p></li>
-                <li> <img src="./img/icons/unnamed (2).png" height="50px"> <h2>Global<br>Team</h2> <p>Hands On, Real World Team-Based Projects. Work with people all over the world in real world projects.</p></li>
-                <li> <img src="./img/icons/unnamed (4).png" height="50px"> <h2>Career<br>Growth</h2> <p>Career Growth with The ROOM. The skills you learn in this program will help grow in your carrer.</p></li>
-                <li> <img src="./img/feat-icons/program_icon_05 1.png" height="50px"> <h2>Remote<br>Access</h2> <p>You can study from anywhere in the world, The program can be accessed remotey.</p></li>
-                <li> <img src="./img/icons/5.png" height="50px"> <h2>Top<br>Tech</h2> <p>Learn with the best programing technlogies in the market. This will get you job ready</p></li>          
+                <li> <div><img src="./img/icons/unnamed (1).png"></div>  <h3>Tech<br>Skills</h3> <p>Gain the technical capabilities and the job-ready skills employers require.</p></li>
+                <li> <div><img src="./img/icons/unnamed (2).png"></div> <h3>Global<br>Team</h3> <p>Hands On, Real World Team-Based Projects. Work with people all over the world in real world projects.</p></li>
+                <li> <div><img src="./img/icons/unnamed (4).png"></div> <h3>Career<br>Growth</h3> <p>Career Growth with The ROOM. The skills you learn in this program will help grow in your carrer.</p></li>
+                <li> <div><img src="./img/feat-icons/program_icon_05 1.png"></div> <h3>Remote<br>Access</h3> <p>You can study from anywhere in the world, The program can be accessed remotey.</p></li>
+                <li> <div><img src="./img/icons/5.png"></div> <h3>Top<br>Tech</h3> <p>Learn with the best programing technlogies in the market. This will get you job ready</p></li>          
             </ul>
             <a href="#">SEE THE WHOLE PROGRAM</a>
         </section>
