the right way to use the @ symbol on html

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     </a>
                 </li>
                 <li>
-                    <p> © excell academy since 2015 - Privacy Policy</p>
-                    <P> all rights reserved </P>
-                </li>
-            </ul>
+   <p> &copy; excell academy since 2015 - Privacy Policy</p>
+   <p> all rights reserved </p>
+</li>
+     </ul>
         </footer>
     </article>
    
